2009-03-16  Lars Hartmann  <lars (at) chaotika (dot) org>

	Added some files to the distribution:
	* Makefile.am (EXTRA_DIST): added doxygen.cfg.
	* doc/Makefile.am (EXTRA_DIST): added xpak.txt.

	Added Doxygen support to build framework:
	* Makefile.am: included aminclude.am.
	* doc/doxygen/api-doc: moved to doxygen.cfg.
	* doxygen.cfg: replaced constants with DX_ macros.
	* configure.ac: added DX_ macros.
	* acinclude.m4: added.
	* aminclude.am: added.

	* configure.ac: small format fix.

	* doc/.gitignore: added.

	* doc/Requirements.txt: updated Requirements.

	Updated preprocessor macros:
	* src/liblpatom.c: updated formatting of preprocessor macros.
	* include/common.h: updated formatting of preprocessor macros.

2009-03-13  Lars Hartmann  <lars (at) chaotika (dot) org>

	Moved doxygen dir and modified doxyfile for api-doc:
	* doxygen/: moved to doc/doxygen.
	* doc/doxygen/api-doc (INPUT): removed src/ dir from api-doc.
	(FILE_PATTERNS): let api-doc only document header files.

	* configure.ac: added AC_C_CONST and AC_C_INLINE.

	* TODO: updated TODO.

	* README: replaced stub with content.

	Switched Project to 2clause BSD License:
	* t/02_lpxpak_parse.c: added license header.
	* t/01_lpatom_parse.c: added license header.
	* src/liblpxpak.c: deleted 3rd clause.
	* src/liblputil.c: deleted 3rd clause.
	* src/liblpatom.c: deleted 3rd clause.
	* include/util.h: deleted 3rd clause.
	* include/xpak.h: deleted 3rd clause.
	* include/dependency.h: deleted 3rd clause.
	* include/common.h: added license header.
	* include/atom.h: deleted 3rd clause.
	* doc/xpak.txt: deleted 3rd clause.
	* doc/xpak.5: deleted 3rd clause.
	* COPYING: deleted 3rd clause.

2009-03-12  Lars Hartmann  <lars (at) chaotika (dot) org>

	added Makefile for Documentation folder.
	* configure.ac (AC_CONFIG_FILES): added doc/Makefile.
	* Makefile.am (SUBDIRS): added doc.
	* doc/Makefile.am: added.

2009-03-11  Lars Hartmann  <lars (at) chaotika (dot) org>
